--- a/New_game_front/playground.css
+++ b/New_game_front/playground.css
@@ -9,14 +9,15 @@ body, html {
 	justify-content: space-around;
 	width: 100%;
 	height: 1200px;
-	background-color: rgb(2, 109, 109);
+	background-image: url("./imgs/heic1509a.jpg");
+	background-color: rgba(0, 5, 73, 0.452);
+	background-blend-mode: darken;
 }
 
 .gameboard {
 	position: relative;
-	background-image: url("./imgs/heic1509a.jpg");
-	background-color: rgba(0, 5, 73, 0.452);
-	background-blend-mode: darken;
+	border: 10px solid darkred;
+	border-radius: 3%;
 	flex: 0 0 1200px;
 }
 
@@ -28,10 +29,11 @@ body, html {
 
 .player {
 	display: block;
-	background-color: rgba(138, 0, 0, 0.274);
-	border: 7px rgba(133, 1, 1, 0.918) solid;
+	background-color: rgba(88, 4, 4, 0.836);
+	border: 7px rgb(133, 1, 1) solid;
 	padding: 15px;
 	font-family: 'Graduate', cursive;
+	color: whitesmoke;
 	font-size: 20px;
 }
 
@@ -42,5 +44,23 @@ body, html {
 
 .ships {
 	position: absolute;
-	width: 150px;
+	height: 150px;
+	left: 10px;
+}
+
+.ships img {
+	height: 100%;
+}
+
+.health {
+	height: 15px;
+	border: 2px solid whitesmoke;
+}
+
+#h_line {
+	padding: 0;
+	margin: 0;
+	background-color: red;
+	height: 100%;
+	width: 100%;
 }
